--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,27 +7,37 @@ services:
     build:
       context: ./app
       dockerfile: dockerfile
+    network_mode: host
     depends_on:
-      - postgres
-    networks:
-      - rinha-net
+      postgres:
+        condition: service_healthy
     environment:
-      - DB_HOST=postgres
+      - DB_HOST=localhost
       - DB_PORT=5432
       - DB_USER=postgres
       - DB_PASS=password
       - DB_NAME=rinha
       - DB_MIN_POOL_SIZE=4
       - DB_MAX_POOL_SIZE=8
+      - Kestrel__Endpoints__Http__Url=http://*:9001
     deploy:
       resources:
         limits:
-          cpus: "0.30"
-          memory: "100MB"
+          cpus: "0.34"
+          memory: "110MB"
 
   app2:
     <<: *app
     container_name: app2
+    environment:
+      - DB_HOST=localhost
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASS=password
+      - DB_NAME=rinha
+      - DB_MIN_POOL_SIZE=4
+      - DB_MAX_POOL_SIZE=8
+      - Kestrel__Endpoints__Http__Url=http://*:9002
 
   gateway:
     container_name: gateway
@@ -37,70 +47,35 @@ services:
     depends_on:
       - app1
       - app2
-    ports:
-      - "9999:9999"
+    network_mode: host
+    expose: 
+      - 9999
     deploy:
       resources:
         limits:
-          cpus: "0.30"
-          memory: "40MB"
-    networks:
-      - rinha-net
-
-  # gateway:
-  #   container_name: gateway
-  #   image: haproxy:latest
-  #   volumes:
-  #     - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
-  #   ports:
-  #     - 9999:9999
-  #   expose:
-  #     - 9999
-  #   networks:
-  #     - rinha-net
-    # deploy:
-    #   resources:
-    #     limits:
-    #       cpus: "0.30"
-    #       memory: "80MB"
-
-  # gateway:
-  #   container_name: gateway
-  #   image: envoyproxy/envoy:dev
-  #   volumes:
-  #     - ./envoy.yaml:/etc/envoy/envoy.yaml
-  #   ports:
-  #     - 9999:9999
-  #   expose:
-  #     - 9999
-  #   networks:
-  #     - rinha-net
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: "0.30"
-  #         memory: "40MB"
+          cpus: "0.26"
+          memory: "20MB"
 
   postgres:
     container_name: postgres
     hostname: postgres
     image: postgres:latest
-    command: postgres -c 'max_connections=64' -c 'shared_buffers=240MB'
-    networks:
-      - rinha-net
+    command: postgres -c 'max_connections=64' -c 'shared_buffers=280MB'
+    network_mode: host
     volumes:
       - ./script.sql:/docker-entrypoint-initdb.d/script.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: rinha
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 5s
+      timeout: 10s
+      start_period: 5s
+      retries: 3
     deploy:
       resources:
         limits:
-          cpus: "0.60"
+          cpus: "0.56"
           memory: "310MB"
-
-networks:
-  rinha-net:
-    driver: bridge
-    name: rinha-net
