--- a/nginx-proxy-bridge.conf
+++ b/nginx-proxy-bridge.conf
@@ -11,8 +11,8 @@ stream {
     access_log off;
 
     upstream api {
-        server localhost:9001 weight=1;
-        server localhost:9002 weight=1;
+        server app1:9001 weight=1;
+        server app2:9002 weight=1;
     }
 
     server {
