--- a/docker-compose-bridge.yml
+++ b/docker-compose-bridge.yml
@@ -72,7 +72,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: rinha
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       interval: 5s
       timeout: 5s
       start_period: 5s
