--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "Kestrel": {
+    "DisableAltSvc": true
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "None",
+      "Microsoft.AspNetCore": "None",
+      "Microsoft.AspNetCore.Server.Kestrel": "None"
     }
   },
   "AllowedHosts": "*"
